Add tags description and add bearer auth example
