# docs/openapi-3.0.yaml
@@ -455,7 +455,7 @@ components:
         - id
       type: object
   securitySchemes:
-    bearerAuth:
+    BearerAuth:
       bearerFormat: JWT
       scheme: bearer
       type: http
@@ -515,6 +515,38 @@ paths:
       summary: Get health status
       tags:
         - Monitoring
+  "/test-auth/{name}\t":
+    get:
+      operationId: test-auth
+      parameters:
+        - description: Name to greet
+          example: world
+          in: path
+          name: name
+          required: true
+          schema:
+            description: Name to greet
+            example: world
+            maxLength: 30
+            type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/GreetingResponseBody"
+          description: OK
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      security:
+        - BearerAuth: []
+      summary: Test Bearar Auth
+      tags:
+        - Miscellaneous
   /test-s3:
     get:
       description: Directly lists files from the S3 bucket to verify connectivity.
@@ -1022,3 +1054,14 @@ paths:
 servers:
   - description: Base Server
     url: ""
+tags:
+  - description: File upload/download services.
+    name: Files
+  - description: Operations related to books.
+    name: Books
+  - description: Operations related to book pages.
+    name: Book Pages
+  - description: Operations related to pets from Petstore service.
+    name: Pets
+  - description: Operations related to reviews.
+    name: Reviews
